crates/test-files/fixtures/compile_errors/ctx_builtins_param_incorrect_type.fe
event WorldMessage {
    message: String<42>
}

contract Barn {
    pub fn cow() {}
}

contract Foo {
    pub fn bar(ctx: Context) {
        let created_barn: Barn = Barn.create(address(26), 0)
        emit WorldMessage(42, message: "hello world")
    }
}
